tests/paczka1/fuzzy1/21178489.err
Error in line 1: bbwR A919 89,0
Error in line 5: A919 A919 42,8
Error in line 7: DWUNeV S125 56,5
Error in line 14: bbwR A919 72,9
Error in line 21: bbwR S931 9,7
Error in line 26: yzC S931 360,8
Error in line 34: 40iYktU S106 2,8
